# ToyCompiler

./: CMakeLists.txt  README.md  main.c
Intro/: A_.h
Lex/: A_.c  Tiger.l  Tiger.lex  errormsg.c  errormsg.h  tokens.h
Test/: prog1.c  prog1.h  prog1Main.c  prog1Main.h
Utils/: Util.c  Util.h
